# string-evm-integration

node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/chiba/: Cargo.toml
pallets/nft/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
