[package]
name = "template-runtime"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
pallet-template = { default-features = false, path = '../pallets/template', version = '3.0.0' }

frame-executive = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false, package = "frame-system" }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false }

pallet-ethereum = "1.0.0"
pallet-evm = "3.0.0"
pallet-evm-precompile-simple = "1.0.0"
pallet-evm-precompile-sha3fips = "1.0.0"
pallet-aura = { version = "3.0.0", default-features = false }
pallet-balances = { version = "3.0.0", default-features = false }
pallet-grandpa = { version = "3.0.0", default-features = false }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false }
pallet-sudo = { version = "3.0.0", default-features = false }
pallet-timestamp = { version = "3.0.0", default-features = false }
pallet-transaction-payment = { version = "3.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false }

sp-api = { version = "3.0.0", default-features = false }
sp-block-builder = "3.0.0"
sp-consensus-aura = { version = "0.9.0-dev", default-features = false}
sp-core = { version = "3.0.0", default-features = false }
sp-inherents = { default-features = false, version = "3.0.0"}
sp-io = { version = "3.0.0", default-features = false }
sp-offchain = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-session = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
sp-transaction-pool = { version = "3.0.0", default-features = false }
sp-version = { version = "3.0.0", default-features = false }
pallet-contracts = { version = "3.0.0", default-features = false }
pallet-contracts-primitives = { version = "3.0.0", default-features = false }
pallet-contracts-rpc-runtime-api = { version = "3.0.0", default-features = false }

fp-rpc = "1.0.0"

[build-dependencies]
substrate-wasm-builder =  "4.0.0"

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-template/std",
	'pallet-contracts/std',
	'pallet-contracts-primitives/std',
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
	'pallet-contracts-rpc-runtime-api/std',
]
