[package]
name = "pallet-chiba"
description = "Chiba Studio runtime module."
license = "Apache-2.0"
version = "0.4.0"
authors = ["Usetech <hello@usetech.com>, Joshua Mir <https://github.com/joshua-mir>, Dan Forbes <dan@danforbes.dev>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Substrate core dependencies
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-io = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-runtime = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
sp-std = { version = "3.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

# FRAME dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.1.0' }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
frame-system = { version = "3.0.0", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

# Chiba dependencies
pallet-atomic-swap = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }
orml-nft = { default-features = false, version = '0.4.0', path = "../nft" }
orml-traits = { git = "https://github.com/chiba-studio/open-runtime-module-library", branch = "master", default-features = false }

[dev-dependencies]
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "frontier" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-atomic-swap/std",
	"orml-nft/std",
	"orml-traits/std",
]
runtime-benchmarks = ["frame-benchmarking"]
